--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,6 +8,7 @@
         android:layout_width="wrap_content"
         android:text="@string/error_no_stocks"
         android:layout_gravity="center"
+        android:contentDescription="@string/stock_symbol"
         android:layout_marginTop="@dimen/graph_margin_top"
         android:textSize="@dimen/graph_text_size"
         android:layout_height="wrap_content" />
@@ -17,6 +17,7 @@
         android:id="@+id/chart"
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
+        android:contentDescription="@string/graph_for_displaying_the_price_change_over_time"
         android:background="@android:color/white"
         android:layout_height="@dimen/graph_graph_height" />
 
