--- a/app/src/main/res/layout/list_item_quote.xml
+++ b/app/src/main/res/layout/list_item_quote.xml
@@ -5,6 +5,7 @@
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:gravity="center_vertical"
     android:orientation="horizontal"
+    android:contentDescription="@string/stock_details"
     android:paddingStart="@dimen/activity_horizontal_margin"
     android:paddingEnd="@dimen/activity_horizontal_margin">
 
@@ -13,11 +14,12 @@
         style="@style/StockSymbolTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/stock_symbol"
         android:gravity="start|center_vertical"
         tools:text="GOOG" />
 
     <LinearLayout
-        android:layout_width="@dimen/null_dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="end">
@@ -27,6 +29,7 @@
             style="@style/BidPriceTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/stock_price"
             android:layout_marginEnd="@dimen/mini_margin"
             tools:text="1000.00" />
 
@@ -35,6 +38,7 @@
             style="@style/PercentChangeTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/stock_price_change"
             android:background="@drawable/percent_change_pill_green"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
