--- a/app/src/main/res/layout/widget_initial.xml
+++ b/app/src/main/res/layout/widget_initial.xml
@@ -13,9 +13,11 @@
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
         android:textStyle="bold"
+        android:contentDescription="@string/widget_name"
         android:text="@string/app_name"/>
     <ListView
         android:id="@+id/listview"
+        android:contentDescription="@string/stocks_details"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </FrameLayout>
